--- a/package.json
+++ b/package.json
@@ -82,20 +82,24 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.70",
     "@iconify-json/openmoji": "^1.2.17",
-    "@nuxt/image": "^1.11.0",
-    "@nuxt/ui": "^4.0.1",
+    "@nuxt/image": "^2.0.0",
+    "@nuxt/ui": "^4.2.1",
     "@nuxtjs/i18n": "^10.1.1",
     "@nuxtjs/seo": "^3.2.2",
     "@pinia/nuxt": "^0.11.2",
-    "@prisma/client": "^7.0.0",
+    "@prisma/adapter-mariadb": "^7.1.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@types/pg": "^8.15.6",
     "@types/prismjs": "^1.26.5",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
+    "mysql2": "^3.11.3",
     "nodemailer": "^7.0.9",
-    "nuxt": "^4.1.3",
+    "nuxt": "^4.2.2",
     "nuxt-auth-utils": "^0.5.25",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-security": "^2.4.0",
@@ -123,7 +127,7 @@
     "nuxi": "^3.29.3",
     "nuxt-mcp": "^0.2.4",
     "prettier": "^3.6.2",
-    "prisma": "^7.0.0",
+    "prisma": "^7.1.0",
     "sharp": "^0.34.4",
     "swagger-jsdoc": "^6.2.8",
     "ts-node": "^10.9.2",
