--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "bcryptjs": "^3.0.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "mariadb": "^3.4.5",
     "mongodb": "^6.9.0",
     "mysql2": "^3.11.3",
     "nodemailer": "^7.0.9",
